--- a/styles/notion.css
+++ b/styles/notion.css
@@ -356,6 +356,10 @@
   border-radius: 50%;
 }
 
+.notion-page-icon-hero.notion-page-icon-image span {
+  width: 100%!important;
+}
+
 .notion-header {
   background: hsla(0, 0%, 100%, 0.8);
   backdrop-filter: saturate(180%) blur(16px);
