--- a/styles/notion.css
+++ b/styles/notion.css
@@ -351,6 +351,10 @@
   background: none !important;
 }
 
+.dark-mode .notion-inline-code {
+  color: rgb(48, 102, 48);
+}
+
 /* if you don't want rounded page icon images, remove this */
 .notion-page-icon-hero.notion-page-icon-image {
   border-radius: 50%;
