--- a/styles/notion.css
+++ b/styles/notion.css
@@ -348,11 +348,16 @@
   padding: 0;
   margin: 0;
   border-radius: 0;
-  background: none !important;
+  /* background: none !important; */
 }
 
 .dark-mode .notion-inline-code {
   color: lightblue!important;
+}
+
+.notion-yellow_background {
+  background-image: none!important;
+  background-color: #ffff0033!important;
 }
 
 /* if you don't want rounded page icon images, remove this */
